# lambdas

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
data/: types_origami.json
src/: alt_expr.rs  alt_expr_parse.rs  analysis.rs  dsl.rs  eval.rs  expr.rs  lib.rs  macros.rs  parse_expr.rs  parse_type.rs  python_bridge.rs  slow_types.rs  types.rs  util.rs  zipper.rs
src/domains/: mod.rs  prim_lists.rs  py.rs  simple.rs  simple_python.rs
