[package]
name = "lambdas"
version = "0.1.0"
authors = ["Matthew Bowers <mlbowers@mit.edu>", "Theo X. Olausson <theoxo@mit.edu>"]
edition = "2018"
license = "MIT"
description = "A library for defining domain specific languages in a polymorphic lambda calculus"
repository = "https://github.com/mlb2251/lambdas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = {version = "0.7.1", features = ["serde-1"]}
serde_json = {version = "1.0", features = ["preserve_order"]}
serde = "1"
lazy_static = "1.4.0"
sexp = "1.1.4"

# [profile.release]
# debug = true # for flamegraphs
