[package]
name = "lambdas"
version = "0.1.0"
authors = ["Matthew Bowers <mlbowers@mit.edu>", "Theo X. Olausson <theoxo@mit.edu>"]
edition = "2018"
license = "MIT"
description = "A library for defining domain specific languages in a polymorphic lambda calculus"
repository = "https://github.com/mlb2251/lambdas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = {version = "1.0", features = ["preserve_order"]}
serde = {version = "1.0", features = ["derive"]}
once_cell = "1.16.0"
string_cache = "0.8.4"
# [profile.release]
# debug = true # for flamegraphs
